--- a/package.json
+++ b/package.json
@@ -12,19 +12,28 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.3.4",
+    "chess.js": "^1.4.0",
+    "framer-motion": "^12.19.2",
     "gsap": "^3.13.0",
     "next": "15.3.4",
+    "phosphor-react": "^1.4.1",
     "react": "^19.0.0",
+    "react-chessboard": "^4.7.3",
     "react-dom": "^19.0.0",
+    "socket.io-client": "^4.8.1",
+    "uuid": "^11.1.0",
     "web3": "^4.16.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/chess.js": "^0.13.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/socket.io-client": "^3.0.0",
+    "@types/uuid": "^10.0.0",
     "@types/webpack": "^5.28.5",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
