--- a/package.json
+++ b/package.json
@@ -8,20 +8,27 @@
     "start": "next start",
     "lint": "next lint"
   },
+    "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.3.4",
+    "@prisma/client": "^6.10.1",
     "chess.js": "^1.4.0",
     "framer-motion": "^12.19.2",
     "gsap": "^3.13.0",
     "next": "15.3.4",
+    "pg": "^8.16.3",
     "phosphor-react": "^1.4.1",
+    "prisma": "^6.10.1",
     "react": "^19.0.0",
     "react-chessboard": "^4.7.3",
     "react-dom": "^19.0.0",
     "socket.io-client": "^4.8.1",
     "uuid": "^11.1.0",
+    
     "web3": "^4.16.0"
   },
   "devDependencies": {
@@ -30,6 +37,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/chess.js": "^0.13.7",
     "@types/node": "^20",
+    "@types/pg": "^8.15.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/socket.io-client": "^3.0.0",
