--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
+    "types/global.d.ts",
     ".next/types/**/*.ts",
     "next.config.js"
 , "prisma/seed.js"  ],
